--- a/TicketSales/templates/TicketSales/concert_list.html
+++ b/TicketSales/templates/TicketSales/concert_list.html
@@ -3,22 +3,44 @@
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سامانه فروش بلیط کنسرت</title>
-    <link rel='stylesheet' type='text/css' href="{% static 'TicketSales/css/style.css' %}">
+
+    <!-- Linking Bootstrap, FontAwesome, and custom styles -->
+    <link rel="stylesheet" type="text/css" href="{% static 'TicketSales/css/bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'TicketSales/css/fontawesome.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'TicketSales/css/style.css'%}">
 </head>
 <body>
-    <h1>لیست کنسرت‌ها</h1>
+    <div class="container">
+        <div class="row box">
+            <h1>لیست کنسرت‌ها</h1>
+            <ul class="btnul">
+                <li><a class="btn btn-success">پروفایل</a></li>
+                <li><a class="btn btn-success">صفحه اصلی</a></li>
+            </ul>
+        </div>
+        <div class="row">
+            {% if concertlist %}
+                {% for concert in concertlist  %}
+                    <div class="col-md-2">
+                       <a>
+                           <div class="imageBox">
+                               {{ concert }}
+                           </div>
+                       </a>
+                    </div>
+                {% endfor %}
+           {% endif %}
+        </div>
 
-    {% if concerts %}
-        <p>تعداد کنسرت های موجود: {{ concertcount }}</p>
-        <ul>
-            {% for concert in concerts %}
-                <li>{{ concert.name }}</li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>هیچ کنسرتی موجود نیست.</p>
-    {% endif %}
-    
+    </div>
+
+    <!-- Include Bootstrap JavaScript (optional for interactivity) -->
+    <script src="{% static 'TicketSales/js/bootstrap.bundle.js' %}"></script>
+    <script src="{% static 'TicketSales/js/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'TicketSales/js/fontawesome.js' %}"></script>
+    <script src="{% static 'TicketSales/js/main.js' %}"></script>
 </body>
 </html>
