--- a/TicketSales/templates/TicketSales/base.html
+++ b/TicketSales/templates/TicketSales/base.html
@@ -19,6 +19,7 @@
             <ul class="btnul">
                 <li><a  class="btn btn-success">پروفایل</a></li>
                 <li><a  class="btn btn-success">صفحه اصلی</a></li>
+                <li><a class="btn btn-danger" href="/TicketSales/location/list/">اطلاعات محل</a></li>
             </ul>
         </div>
         <div class="row">
