--- a/TicketSales/templates/TicketSales/locationlist.html
+++ b/TicketSales/templates/TicketSales/locationlist.html
@@ -4,20 +4,28 @@
     لیست کنسرت‌ها
 {% endblock %}
 {% block mainContent %}
-{% if concerts %}
-    <div class="row">
-        {% for concert in concerts %}
-            <div class="col-sm-6 col-md-4 col-lg-2">
-                <a href="#">
-                    <div class="imageBox">
-                        <img alt="{{ concert.singer_name }}" src="{{ concert.Concert_picture.url }}">
-                        <p>{{ concert.name }}</p>
-                    </div>
-                </a>
+    
+    <div class="row locationHeader">
+       <div class="col-md-3">
+           <h3>نام سالن </h3>
+       </div>
+       <div class="col-md-9">
+           <h3>آدرس</h3>
+       </div>
+    </div>
+    
+    {% if locationlist %}
+        {% for location in locationlist %}
+            <div class="row location">
+               <div class="col-md-3">
+                   {{ location.name }}
+               </div>
+               <div class="col-md-9">
+                   {{ location.address }}
+               </div>
             </div>
         {% endfor %}
-    </div> 
-{% else %}
-    <p>هیچ کنسرتی موجود نیست.</p>
-{% endif %}
+    {% else %}
+        <p>هیچ کنسرتی یافت نشد.</p>
+    {% endif %}
 {% endblock %}
