--- a/TicketSales/templates/TicketSales/locationlist.html
+++ b/TicketSales/templates/TicketSales/locationlist.html
@@ -4,7 +4,7 @@
     لیست کنسرت‌ها
 {% endblock %}
 {% block mainContent %}
-    
+
     <div class="row locationHeader">
        <div class="col-md-3">
            <h3>نام سالن </h3>
@@ -13,8 +13,8 @@
            <h3>آدرس</h3>
        </div>
     </div>
-    
-    {% if locationlist %}
+
+    {% if locations %}
         {% for location in locationlist %}
             <div class="row location">
                <div class="col-md-3">
