--- a/TicketSales/templates/TicketSales/concert_list.html
+++ b/TicketSales/templates/TicketSales/concert_list.html
@@ -1,23 +1,25 @@
 {% extends 'TicketSales/base.html' %}
 {% load static %}
+
 {% block titlepage %}
     لیست کنسرت‌ها
 {% endblock %}
+
 {% block mainContent %}
     {% if concerts %}
     <div class="row">
         {% for concert in concerts %}
-            <div class="col-sm-6 col-md-4 col-lg-2">
-                <a href="#">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <a href="{% url 'concert_detail' concert.id %}">
                     <div class="imageBox">
-                        <img alt="{{ concert.name }}" src="{{ concert.Concert_picture.url }}">
+                        <img src="{{ concert.Concert_picture.url }}" alt="{{ concert.name }}" class="img-fluid">
+                        <p>{{ concert.name }}</p>
                     </div>
                 </a>
             </div>
         {% endfor %}
-    </div>
-{% else %}
-    <p>هیچ کنسرتی موجود نیست.</p>
-{% endif %}
+    </div>    
+    {% else %}
+        <p>در حال حاضر کنسرتی موجود نیست.</p>
+    {% endif %}
 {% endblock %}
-
