--- a/TicketSales/static/TicketSales/css/style.css
+++ b/TicketSales/static/TicketSales/css/style.css
@@ -43,10 +43,12 @@ body {
 }
 
 .locationHeader {
-    display: flex;
-    background-color: #f8f9fa;
-    padding: 15px;
-    border-bottom: 2px solid #dee2e6;
+    background-color: whitesmoke;
+    margin: 5px;
+    text-align: right;
+    font-size: 15px;
+    border: 2px dashed green;
+    padding: 10px;
     color: green;
 }
 
@@ -109,4 +111,13 @@ p {
 .locationHeader:hover {
     background-color: #e9ecef;
     cursor: pointer;
+}
+
+.timeBox{
+    margin: 5px;
+    background-color: whitesmoke;
+    font-size: 15px;
+    border: 1px dashed green;
+    padding: 10px;
+    text-align: center;
 }
