Concert/settings.py

--- a/TicketSales/templates/TicketSales/timelist.html
+++ b/TicketSales/templates/TicketSales/timelist.html
@@ -67,7 +67,7 @@
                     <div class="timeBox">
                        <h2>{{ time.concert.name }}</h2>
                        <p>{{ time.concert.singer_name }}</p>
-                       <p>{{ time.concert.date }}</p>
+                       <p>{{ time.get_jalai_date }}</p>
                        <p>{{ time.location.address }}</p>
                        <p>{{ time.concert.length }}</p>
                        <div class="btn 
