--- a/TicketSales/templates/TicketSales/base.html
+++ b/TicketSales/templates/TicketSales/base.html
@@ -17,7 +17,12 @@
         <div class="row box">
             <h1>{% block titlepage %}{% endblock %}</h1>
             <ul class="btnul">
-                <li><a  class="btn btn-success">پروفایل</a></li>
+                {% if user.is_authenticated %}
+                    <li><a  class="btn btn-danger" href="{% url 'profile' %}">پروفایل</a></li>
+                    <li><a  class="btn btn-danger" href="{% url 'logout' %}">خروج</a></li>
+                {% else  %}
+                    <li><a  class="btn btn-success" href="{% url 'login' %}">ورود</a></li>
+                {% endif %}
                 <li><a  class="btn btn-success" href="{% url 'concert' %}">صفحه اصلی</a></li>
                 <li><a  class="btn btn-success" href="{% url 'time_list' %}">مشاهده کنسرت‌ها</a></li>
                 <li><a class="btn btn-danger" href="{% url 'location' %}">اطلاعات محل</a></li>
