--- a/static/accounts/css/style.css
+++ b/static/accounts/css/style.css
@@ -1,21 +1,25 @@
 @import url('https://fonts.cdnfonts.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('../img/img.jpeg');
+    background: url("../img/img.jpg") no-repeat center center;
+    background-size: cover;
+    margin: 0;
 }
 .wrapper{
     width: 420px;
-    background:purple;
+    background:transparent;
+    border:2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
