--- a/TicketSales/templates/TicketSales/base.html
+++ b/TicketSales/templates/TicketSales/base.html
@@ -23,9 +23,9 @@
                 {% else  %}
                     <li><a  class="btn btn-success" href="{% url 'login' %}">ورود</a></li>
                 {% endif %}
-                <li><a  class="btn btn-success" href="{% url 'concert' %}">صفحه اصلی</a></li>
+                <li><a  class="btn btn-success" href="{% url 'concert_list' %}">صفحه اصلی</a></li>
                 <li><a  class="btn btn-success" href="{% url 'time_list' %}">مشاهده کنسرت‌ها</a></li>
-                <li><a class="btn btn-danger" href="{% url 'location' %}">اطلاعات محل</a></li>
+                <li><a class="btn btn-danger" href="{% url 'location_list' %}">اطلاعات محل</a></li>
             </ul>
         </div>
         <div class="row">
