--- a/TicketSales/templates/TicketSales/base.html
+++ b/TicketSales/templates/TicketSales/base.html
@@ -20,6 +20,7 @@
                 {% if user.is_authenticated %}
                     <li><a  class="btn btn-danger" href="{% url 'profile' %}">پروفایل</a></li>
                     <li><a  class="btn btn-danger" href="{% url 'logout' %}">خروج</a></li>
+                    <li><a class="btn btn-danger" href="{% url 'profile-register' %}">ثبت نام</a></li>
                 {% else  %}
                     <li><a  class="btn btn-success" href="{% url 'login' %}">ورود</a></li>
                 {% endif %}
